[package]
name = "test_plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonk-core = { path = "plonk-core" }
plonk-hashing = { path = "plonk-hashing" }
ark-ed-on-bls12-381 = "0.3"
ark-ff = "0.3"
ark-sponge = "0.3"
ark-std = "0.3"
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-ed-on-bls12-377 = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
blake2 = "0.9"
criterion = "0.3"
derivative = "2.2.0"
paste = "1.0.6"
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
tempdir = "0.3"
ark-vesta = "0.3"
